# pomaidb

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  LICENSE  MANIFESTO.md  Makefile  PHASE2.md  PHASE_1_PROGRESS.md  README.md  SECURITY.md  TODO.md  TODO_PPE_ATOMIC.md  WAL_TODO.md  bench_baseline.md  benchmark_all.sh  build.sh  coverage.html  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  image_vectors.npz  init.sql  main.cc  patch_bindings.py  pomai-server  pomai_test  refine_end_to_end_build.sh  requirements  (+4 more)
benchmarks/: CMakeLists.txt  README_simhash_bench.md  bench_cbrs.cpp  bench_concurrent.cpp  bench_concurrent_search.cpp  bench_embedded.cpp  bench_phase3.cpp  bench_pomai.cpp  bench_pomai.py  bench_server_sql.py  bench_wal.cpp  benchmark.py  benchmark_client.py  benchmark_vs.py  ci_perf_bench.cc  comprehensive_bench.cc  direct_benchmark.cc  ingestion_bench.cc  kernel_dispatch_bench.cc  palloc_env_stress.cc  perf_baseline.json  pomai_benchmark.cc  pomai_milestone_benchmark.cc  pwp_bench.cc  pwp_bench.py  python_cifar10_feature_bench.py  python_reliability_bench.py  rag_bench.cc  run_bench_concurrent_search.sh  run_simhash_bench.py  vector_insert.py  vector_query.py
benchmarks/cross_engine/: README.md  engine_worker.py  run_benchmark.py
src/ai/: CMakeLists.txt  ai_engine.cpp  ai_engine.h  atomic_utils.h  candidate_collector.cc  candidate_collector.h  codebooks.cc  codebooks.h  eternalecho_quantizer.cc  eternalecho_quantizer.h  fingerprint.cc  fingerprint.h  holographic_scanner.h  ids_block.cc  ids_block.h  network_cortex.cc  network_cortex.h  pomai_hnsw.cc  pomai_hnsw.h  pomai_orbit.cc  pomai_orbit.h  pomai_orbit_thermal.cc  pomai_space.h  pp_ivf.cc  pp_ivf.h  ppe.h  ppe_array.h  ppe_predictor.h  pppq.cc  pppq.h  pq.cc  pq.h  pq_encoder.cc  pq_encoder.h  pq_eval.cc  pq_eval.h  prefilter.cc  prefilter.h  quantize.h  refine.cc  (+19 more)
src/core/: CMakeLists.txt  bitset_mask.cc  bitset_mask.h  config.cc  config.h  cpu_kernels.h  crc64.c  distance.cc  distance.h  edge_arch_test.cc  hot_tier.h  ingestor.h  map.h  membrane.cpp  memory_manager.cpp  metadata_index.h  metrics.h  orbit_index.cpp  orchestrator.h  pomai_db.cc  pomai_db.cpp  pomai_db.h  pps_manager.cc  pps_manager.h  seed.cpp  seed.h  shard.cpp  shard.h  shard_manager.h  shard_router.h  snapshot_wrapper.h  spatial_router.cpp  split_manager.cc  split_manager.h  synapse_codec.cc  synapse_codec.h  types.h  wal.cpp  wal_seed.cpp  wal_uring.cpp  (+4 more)
tests/: CMakeLists.txt  append_only_arena_stress.cc  arena_demote_async_test.cc  bench_baseline.cc  build_test.sh  centroids_persistence_tests.cpp  compaction_tests.cpp  corruption_detection_tests.cpp  direct_benchmark.cc  engine_check.cc  ingest_and_check.py  ingest_cifar.py  memory_safety_tests.cpp  metadata_filter_tests.cpp  palloc_perf_verify.cc  phase1_safety_tests.cpp  pomai_db_writer.cpp  pomai_shutdown_concurrency_tests.cpp  quantization_fixed_bounds_tests.cpp  rerank_exact_tests.cpp  run_tests.sh  sanity_check.cc  scan_tests.cpp  shard_concurrency_tests.cpp  storage_contract_tests.cpp  test.sh  test_arena.cc  test_blob_freelist.cc  test_c_api_basic.cpp  test_durability.py  test_eternalecho_quantizer.cc  test_fingerprint.cc  test_ids_block.cc  test_ids_block_overflow.cc  test_ids_block_pack_safe.cc  test_ids_block_server_safe.cc  test_indirect.cc  test_map_harvest.cc  test_network_cortex.cc  test_pomai_api.cc  (+28 more)
tests/atomic/: CMakeLists.txt  atomic_mmap_test.cc  ppe_publish_test.cc
tests/common/: bruteforce_oracle.cc  bruteforce_oracle.h  db_test_util.h  test_main.h  test_random.h  test_runner.cc  test_tmpdir.h  test_utils.cpp  test_utils.h
tests/concurrency/: test_ingest_concurrency.cpp  test_search_concurrency.cpp  test_shutdown_races.cpp
tests/core/: test_filtering.cpp  test_filtering_correctness.cpp  test_membrane.cpp  test_orbit_index.cpp  test_quality_filter_contract.cpp  test_scan.cpp  test_search.cpp  test_seed.cpp  test_shard.cpp  test_spatial_router.cpp
tests/crash/: crash_replay_test.cc  manifest_corruption_test.cc  recovery_test.cc
tests/ffi/: python_ctypes_smoke.py
tests/fuzz/: CMakeLists.txt  membrane_fuzzer.cc  storage_fuzzer.cc
tests/ids/: ids_block_test.cc
tests/integ/: agent_memory_basic_test.cc  agent_memory_capi_test.cc  db_basic_test.cc  db_batch_test.cc  db_consistency_test.cc  db_error_paths_test.cc  db_open_test.cc  db_partial_search_test.cc  db_persistence_test.cc  db_segment_test.cc  db_write_batch_test.cc  iterator_test.cc  membrane_persistence_test.cc  membrane_test.cc  metadata_test.cc  rag_contract_test.cc  rag_search_test.cc  routing_engine_test.cc  search_filter_test.cc  search_newest_wins_test.cc  shard_concurrency_test.cc
tests/intergration/: vector_store_end_to_end_test.cc  vector_store_parity_test.cc
tests/memory/: mmap_file_manager_append_flush_test.cc
tests/perf_guard/: test_latency_budget_logic.cpp  test_no_alloc_rerank.cpp
tests/pppq/: pppq_demote_concurrency_test.cc  pppq_demote_metrics_test.cc
tests/pq/: raw8_eval_test.cc
tests/prefilter/: prefilter_integration_test.cc  vector_store_prefilter_integration.cc
tests/recall/: recall_dataset.cc  recall_dataset.h  recall_test.cc
tests/refine/: refine_end_to_end.cc
tests/soa/: soa_write_read_test.cc  wal_manager_test.cc
tests/storage/: test_checkpoint_recovery.cpp  test_corruption_detection.cpp  test_wal.cpp  test_wal_replay.cpp
tests/tools/: test_pomai_dump.cpp  test_pomai_verify.cpp
tests/tsan/: basic_workload_tsan_test.cc  db_concurrency_tsan_test.cc  shard_runtime_tsan_test.cc
tests/unit/: agent_memory_concurrency_test.cc  agent_memory_core_test.cc  crc32c_test.cc  env_test.cc  graph_memory_accounting_test.cc  graph_persistence_test.cc  hnsw_pomaidb_test.cc  kernel_hardening_test.cc  logging_test.cc  mailbox_test.cc  manifest_test.cc  memtable_test.cc  multi_modal_test.cc  oracle_test.cc  palloc_page_pool_test.cc  routing_table_test.cc  segment_test.cc  shard_manifest_test.cc  wal_test.cc  (+3 more)
(+606 files in other folders)
